# ecfactory

./: .gitignore  AUTHORS  LICENSE  pyproject.toml  readme.md
ecfactory/: __init__.py
ecfactory/bls_curves/: __init__.py  bls_curves.py  bls_curves_examples.py  bls_curves_tests.py  readme.md
ecfactory/bls_curves/bls_curves_cpp/: README.md  bls_search.cpp  bls_statistics
ecfactory/bn_curves/: __init__.py  bn_curves.py  bn_curves_examples.py  bn_curves_tests.py  readme.md
ecfactory/bn_curves/bn_curves_cpp/: README.md  bn_search.cpp
ecfactory/cocks_pinch/: __init__.py  cocks_pinch.py  cocks_pinch_examples.py  cocks_pinch_tests.py  readme.md
ecfactory/complex_multiplication/: __init__.py  complex_multiplication.py  complex_multiplication_examples.py  complex_multiplication_tests.py  readme.md
ecfactory/dupont_enge_morain/: __init__.py  dupont_enge_morain.py  dupont_enge_morain_examples.py  dupont_enge_morain_tests.py  readme.md
ecfactory/ec_chain/: __init__.py  ec_chain.py  ec_chain_examples.py  ec_chain_tests.py  readme.md
ecfactory/mnt_curves/: __init__.py  mnt6_enumeration.csv  mnt_curves.py  mnt_curves_examples.py  readme.md
ecfactory/mnt_cycles/: __init__.py  mnt_cycles.py  mnt_cycles_examples.py  readme.md
ecfactory/pell_equation_solver/: __init__.py  pell_equation_solver.py  pell_equation_solver_examples.py  pell_equation_solver_test.py  readme.md
ecfactory/profile/: plot_cp.gp  plot_cp_vs_dem.gp  plot_dem.gp  profile.py
ecfactory/profile/logs/cp/: k10.csv  k11.csv  k12.csv  k13.csv  k14.csv  (+11 more)
ecfactory/utils/: __init__.py  readme.md  utils.py
(+16 files in other folders)
