[tool.poetry]
name = "ecfactory"
version = "0.1.0"
description = "A SageMath Library for Constructing Elliptic Curves"
authors = ["See AUTHORS file"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"